k8s/deployment-sample1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample1
  template:
    metadata:
      labels:
        app: nginx-sample1
    spec:
      containers:
      - name: nginx-sample1
        image: breinerhenrique/nginx:sample1
        resources:
          requests:
            memory: "1Mi"
            cpu: "1m"
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample1-service
spec:
  selector:
    app: nginx-sample1
  ports:
  - port: 80
    targetPort: 80
#  type: LoadBalancer
